2011-04-13  Brent Fulgham  <bfulgham@webkit.org>

        Reviewed by Martin Robinson.

        [WinCairo] Implement ImageDiff Logic.
        http://bugs.webkit.org/show_bug.cgi?id=58486

        * DumpRenderTree/win/ImageDiffCairo.cpp: Added.
        (strtof):
        (readFromData):
        (createImageFromStdin):
        (releaseMallocBuffer):
        (createDifferenceImage):
        (imageHasAlpha):
        (writeToData):
        (main):
        * DumpRenderTree/win/ImageDiff.vcproj: Updated for new
          ImageDiffCairo.cpp (excluding from Apple builds).
        * DumpRenderTree/win/ImageDiffDebugCairoCFLite.vsprops: Use
          new ImageDiffWinCairoCommon.vsprops file.
        * DumpRenderTree/win/ImageDiffReleaseCairoCFLite.vsprops: Use
          new ImageDiffWinCairoCommon.vsprops file.
        * DumpRenderTree/win/ImageDiffWinCairoCommon.vsprops: Added.
        * Scripts/old-run-webkit-tests: Make sure proper executable
          is built and executed for WinCairo port.

2011-04-14  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        only show expected failure type for ports that use an expectations file
        https://bugs.webkit.org/show_bug.cgi?id=58588

        * Scripts/webkitpy/layout_tests/layout_package/json_results.html:
        * Scripts/webkitpy/layout_tests/layout_package/test_runner.py:

2011-04-14  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        commit-queue fails to catch IOError when results.html is missing
        https://bugs.webkit.org/show_bug.cgi?id=58589

        * Scripts/webkitpy/tool/commands/queues.py:
        * Scripts/webkitpy/tool/commands/queues_unittest.py:

2011-04-14  Kevin Ollivier  <kevino@theolliviers.com>

        [wx] Unreviewed build fix for Mac installation script.

        * wx/packaging/build-mac-installer.py:

2011-04-14  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Tony Chang.

        sort columns in the new json_results.html file