@@ -1,3 +1,12 @@
+2011-04-14  Ojan Vafai  <ojan@chromium.org>
+
+        Reviewed by Eric Seidel.
+
+        add checkbox to only show unexpected results to new results file
+        https://bugs.webkit.org/show_bug.cgi?id=58606
+
+        * Scripts/webkitpy/layout_tests/layout_package/json_results.html:
+
 2011-04-13  Brent Fulgham  <bfulgham@webkit.org>
 
         Reviewed by Martin Robinson.
